--- a/reservation_complete.html
+++ b/reservation_complete.html
@@ -47,6 +47,7 @@
                     </a>
                 </div>
             </div>
+        </div>
         <div class="mt-6 border-t pt-6">
             <p class="text-sm text-gray-700 leading-relaxed">
                 <strong class="font-bold text-red-600">予約は完了していません。</strong>LINEでやり取り後に正式に決定となります。お手数をおかけしますが、LINEで友だちの追加後にメッセージをお願い致します。
