--- a/reservation_complete.html
+++ b/reservation_complete.html
@@ -35,7 +35,7 @@
 
         <div class="grid md:grid-cols-2 gap-8 items-center">
             <div class="text-center">
-                <img src="https://nimble-sunburst-26786d.netlify.app/image/line-qr.jpg" alt="LINE QR Code" class="mx-auto mb-4 rounded-lg w-48 h-48">
+                <img src="image/line-qr.jpg" alt="LINE QR Code" class="mx-auto mb-4 rounded-lg w-48 h-48">
                 <p class="font-bold">QRコードで追加</p>
             </div>
             <div class="text-left space-y-4 md:space-y-8 flex flex-col justify-center">
