--- a/reservation_complete.html
+++ b/reservation_complete.html
@@ -54,7 +54,7 @@
             </p>
         </div>
         <div class="mt-6 flex justify-end">
-            <a href="/index.html" class="text-sm text-gray-500 hover:text-gray-800 transition-colors duration-300">
+            <a href="index.html" class="text-sm text-gray-500 hover:text-gray-800 transition-colors duration-300">
                 webサイトに戻る &rarr;
             </a>
         </div>
