--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             あなたのこの先の人生に<br>
                             笑顔を増やしていきたい、<br>
                             そんな思いを軸にして動いている<br>
-                            パーソナルトレーナー
+                            パーソナルボディーメイカー
                         </p>
                         <div class="flex flex-col sm:flex-row items-center justify-center md:justify-start gap-4">
                             <a href="#contact" class="btn-mint text-white font-bold py-3 px-8 rounded-full transition-all duration-300 hover:scale-105 w-full sm:w-auto">まずは気軽に相談してみる</a>
@@ -334,14 +334,13 @@
                                     また、運動をしているのに綺麗な身体でもないのは何故???から始まり、現在に至ります。
                                  </p>
 
-                                 <!-- Custom Separator -->
                                  <div class="custom-separator">
                                      <span class="custom-separator-icon">⟡</span>
                                  </div>
 
                                  <div class="text-sm text-gray-600 leading-relaxed space-y-4">
                                      <div id="concept-intro">
-                                        <p>はじめまして！<br>パーソナルトレーナーの<span class="text-highlight font-bold">ぬいぬい</span>です！</p> <!-- Highlight applied -->
+                                        <p>はじめまして！<br>パーソナルボディーメイカーの<span clss="font-bold">ぬいぬいです</span>！</p>
                                         <p>スポーツや運動が好きかと言われたら、実は普通です。運動して疲れる事が好きじゃない引きこもりのオタクなので、どちらかというと気持ちは運動が向いてないタイプです。なるべく頑張る時間を少なくして、楽しむ時間を増やしたいなと、如何に運動効果を上げるために何をしたらいいのかを常に考えています。</p>
                                      </div>
                                     <div id="concept-more" class="collapsible-content space-y-4">
@@ -471,7 +470,7 @@
                                 <h4 class="text-xl font-bold text-[#6B9BD1] mb-2 sm:mb-0 flex items-center"><span class="mr-2 text-2xl">🌸</span>コンディショニング (60分)</h4>
                                 <p class="text-2xl font-bold" style="color: #98D8C8;">8,000円</p>
                             </div>
-                            <p class="text-gray-600 text-sm mb-4">ストレッチや手技で全身の可動域と柔軟性を引き出し、<br>疲労回復や姿勢改善を目的に整えていくセッション。</p>
+                            <p class="text-gray-600 text-sm mb-4">ストレッチや手技で全身の可動域と柔軟性を引き出し、<br>疲労回復や姿勢改善を目的に整えていく｢整体｣セッション。</p>
                             <div class="mb-4">
                                 <h5 class="font-bold text-gray-700 text-sm mb-2">こんな方におすすめ</h5>
                                 <ul class="list-disc list-inside text-gray-600 text-sm space-y-1">
@@ -486,7 +485,7 @@
                          <!-- Plan 4: Trial Session -->
                         <div class="border rounded-2xl p-6 shadow-md fade-in">
                             <div class="flex flex-col sm:flex-row justify-between items-start mb-4">
-                                <h4 class="text-xl font-bold text-[#6B9BD1] mb-2 sm:mb-0 flex items-center"><span class="mr-2 text-2xl">🌿</span>体験セッション (60分・初回限定)</h4>
+                                <h4 class="text-xl font-bold text-[#6B9BD1] mb-2 sm:mb-0 flex items-center"><span class="mr-2 text-2xl">🌿</span>体験セッション<br> (60分・初回限定)</h4>
                                 <!-- Price varies, shown below -->
                             </div>
                             <div class="grid sm:grid-cols-2 gap-4 mb-4">
@@ -514,7 +513,7 @@
                         <!-- Plan 5: Online Session -->
                         <div class="border rounded-2xl p-6 shadow-md fade-in">
                              <div class="flex flex-col sm:flex-row justify-between items-start mb-4">
-                                <h4 class="text-xl font-bold text-[#6B9BD1] mb-2 sm:mb-0 flex items-center"><span class="mr-2 text-2xl">💎</span>オンラインセッション (30分)</h4>
+                                <h4 class="text-xl font-bold text-[#6B9BD1] mb-2 sm:mb-0 flex items-center"><span class="mr-2 text-2xl">💎</span>オンラインセッション<br> (30分)</h4>
                                 <p class="text-2xl font-bold" style="color: #98D8C8;">3,500円</p>
                             </div>
                             <p class="text-gray-600 text-sm mb-4">Zoomを使用して行うオンラインサポート。<br>ご自宅や職場で、空き時間に身体を整えたい方に。<br>口頭での動作チェックやセルフケア指導など、短時間でも効果的にリセットできます。</p>
@@ -523,32 +522,32 @@
                     </div>
 
                     <!-- Preset Examples -->
-                    <h3 class="text-2xl font-bold text-center text-[#6B9BD1] mb-10 fade-in flex items-center justify-center"><span class="mr-2 text-2xl">🩵</span>よくある組み合わせ例（プリセット）</h3>
+                    <h3 class="text-2xl font-bold text-[#6B9BD1] mb-10 fade-in flex items-center justify-center"><span class="mr-2 text-2xl">🩵</span>よくある組み合わせ例<br>（プリセット）</h3>
                     <p class="text-center text-sm text-gray-500 mb-10 fade-in -mt-6">※お客様の体調や希望によって内容は変化していきます。</p>
                     <div class="grid md:grid-cols-2 gap-8 mb-20">
                         <!-- Preset 1: Balance Up -->
                         <div class="border rounded-2xl p-6 shadow-md fade-in bg-white">
                             <h4 class="text-lg font-bold text-center text-[#6B9BD1] mb-4">🌿 バランスアップ90</h4>
                             <div class="space-y-3 text-sm">
-                                <p><span class="font-bold">内容：</span> コンディショニング＋トレーニング（90分）<br><span class="ml-4">【＋加圧：腕＋脚】</span></p>
+                                <p><span class="font-bold">内容：</span> コンディショニング＋トレーニング（90分）<br><span class="ml-4">＋【加圧：腕＋脚】</span></p>
                                 <p><span class="font-bold">特徴：</span> 姿勢・可動域・筋力を総合的に整える定番プラン。骨格から整え、見た目と機能の両方を高めます。</p>
-                                <p><span class="font-bold">おすすめ：</span> 姿勢改善・疲れにくい身体づくり・ボディライン調整</p>
+                                <p><span class="font-bold">おすすめ：</span> 姿勢改善・疲れにくい身体づくり・ボディライン調整・筋肉がつきにくいと思う人に</p>
                             </div>
                         </div>
                         <!-- Preset 2: Slim Boost -->
                         <div class="border rounded-2xl p-6 shadow-md fade-in bg-white">
                             <h4 class="text-lg font-bold text-center text-[#6B9BD1] mb-4">✨ スリムブースト90</h4>
                             <div class="space-y-3 text-sm">
-                                <p><span class="font-bold">内容：</span> コンディショニング（短）→【加圧（腕のみ）】→トレーニング</p>
+                                <p><span class="font-bold">内容：</span> 【加圧 (腕のみ)】＋トレーニング＋コンディショニング (短)</p>
                                 <p><span class="font-bold">特徴：</span> 成長ホルモン分泌を促し、短時間でも代謝を最大化。軽い負荷で引き締め・美肌・代謝UPを狙う女性人気プラン。</p>
-                                <p><span class="font-bold">おすすめ：</span> ダイエット・冷え・むくみ・代謝改善</p>
+                                <p><span class="font-bold">おすすめ：</span> 姿勢改善・冷え・むくみ・代謝改善</p>
                             </div>
                         </div>
                          <!-- Preset 3: Recovery -->
                         <div class="border rounded-2xl p-6 shadow-md fade-in bg-white">
                             <h4 class="text-lg font-bold text-center text-[#6B9BD1] mb-4">🌙 リカバリー60</h4>
                             <div class="space-y-3 text-sm">
-                                <p><span class="font-bold">内容：</span> コンディショニング（45分）→軽いトレーニング</p>
+                                <p><span class="font-bold">内容：</span> コンディショニング（45分）→軽トレーニング</p>
                                 <p><span class="font-bold">特徴：</span> 可動域と血流を促し、不調や疲労を回復へ導く。トレーニング前後や、体調を整えたい日におすすめ。</p>
                                 <p><span class="font-bold">おすすめ：</span> 肩こり・腰の重さ・倦怠感・睡眠改善</p>
                             </div>
@@ -559,7 +558,7 @@
                              <div class="space-y-3 text-sm">
                                 <p><span class="font-bold">内容：</span> コンディショニング（短）＋トレーニング＋【加圧（脚のみ)】</p>
                                 <p><span class="font-bold">特徴：</span> 神経反応を整え、正確な動作と安定性を高める。機能的な動きを養い、全身の連動性を引き出す。</p>
-                                <p><span class="font-bold">おすすめ：</span> スポーツ・パフォーマンスアップ・動作改善</p>
+                                <p><span class="font-bold">おすすめ：</span> 機能向上・パフォーマンスアップ・動作改善</p>
                             </div>
                         </div>
                         <!-- Preset 5: Maintenance Day -->
@@ -657,18 +656,15 @@
 
                     <div id="testimonials-more" class="collapsible-content">
                         
-                        <!-- Image Reviews -->
                         <div id="testimonials-grid" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                             <div class="bg-white rounded-2xl shadow-lg fade-in overflow-hidden border border-gray-200 flex flex-col">
-                                <!-- 1. 画像部分 (先に表示・縦に並べる) -->
                                 <div class="p-4 bg-gray-50">
-                                    <img src="image/customer1.jpg" alt="お客様の変化 Before" class="rounded-lg shadow-md w-full mb-4"> <!-- 画像間にマージン追加 -->
+                                    <img src="image/customer1.jpg" alt="お客様の変化 Before" class="rounded-lg shadow-md w-full mb-4">
                                     <img src="image/customer2.jpg" alt="お客様の変化 After" class="rounded-lg shadow-md w-full" onerror="this.onerror=null;this.src='https://placehold.co/600x600/F8F9FA/333333?text=Image';">
                                 </div>
                                 
-                                <!-- 2. テキスト部分 (後に表示・改変なし) -->
                                 <div class="p-6 flex-grow">
-                                    <p class="text-xs text-gray-600 leading-relaxed"> <!-- <-- text-sm から text-xs に変更 -->
+                                    <p class="text-sm text-gray-600 leading-relaxed">
                                         食事制限無し、重りも2kg以上持たずとも少しずつ身体は変化していきます。(約3～4ヶ月)
                                         <br>また柔軟性を上げつつゆっくり根本から改善していくため、運動をしない期間があっても戻りにくいです。(個人差はあります)
                                     </p>
@@ -758,7 +754,7 @@
         <section id="contact" class="py-20 md:py-28 bg-white">
             <div class="container mx-auto px-6">
                 <div class="max-w-4xl mx-auto">
-                    <p class="text-gray-600 mb-8 leading-relaxed text-sm">NUINUIでは、出張専門・完全オーダーメイドで、お一人おひとりの身体やライフスタイルに合わせたサポートを行っています。<br>その日の状態に寄り添いながら、無理なく“続けられる方法”を一緒に見つけていくので、運動が苦手な方でも安心して始めていただけます。<br>たとえ頑張れない日があっても大丈夫です。今のままのあなたで始めて問題ありません。<br>お気持ちやお悩みを、どうぞ安心してお聞かせくださいね。</p>
+                    <p class="text-gray-600 mb-8 leading-relaxed text-sm">NUINUIでは、出張専門・完全オーダーメイドで、お一人おひとりの身体やライフスタイルに合わせたサポートを行っています。<br><br>その日の状態に寄り添いながら、無理なく“続けられる方法”を一緒に見つけていくので、運動が苦手な方でも安心して始めていただけます。<br><br>たとえ頑張れない日があっても大丈夫です。<br>今のままのあなたで始めて問題ありません。<br>お気持ちやお悩みを、どうぞ安心してお聞かせくださいね。</p>
                     <div class="bg-white p-8 rounded-2xl shadow-xl fade-in text-left border mb-12">
                         <h3 class="text-2xl font-bold text-[#6B9BD1] mb-6 text-center">LINEでのご相談</h3>
                         <div class="grid md:grid-cols-2 gap-8 items-center">
@@ -849,7 +845,7 @@
                             <p>運動以外にも時間を使いたい多趣味人間。常に運動をしてきたけれど、運動自体はそこまで好きではない。生物(動物)として必要だからやらきゃなあと思っています。</p>
                             <p>学生の頃からの生粋のオタク。ガチガチのインドアです。全盛期のニコニコ動画を通り、アニメやゲームを嗜んできた学生時代。推しの話、ミームネタ等どんとこい。オタクのお客様だけを集めたオフ会など年に1回のペースで行っています。個人でインストラクターをしながら、IT業界や法律事務所に居たり。元コンカフェのキャストだったり、アイドルもしていたりと、気になることは常に飛び込んでいますが、一貫して常に身体のことに関して調べるのが癖でした。</p>
                             <p>｢何故本名じゃなく、ぬいぬいなの？｣<br>キャストをしていた時のあだ名です。あと、ぬいぬいって呼ぶと口の形がイーッで終わるので好き。笑</p>
-                            <p class="text-highlight font-bold">なにより人を笑顔にするのが好きです。笑顔を見ることが好き。自分と過ごす運動の時間を、少しでも楽しかったと思えるような時間にしていきたいと思っています。どうぞよろしくお願いいたします。</p> <!-- Highlight applied -->
+                            <p class="font-bold">なにより人を笑顔にするのが好きです。笑顔を見ることが好き。自分と過ごす運動の時間を、少しでも楽しかったと思えるような時間にしていきたいと思っています。どうぞよろしくお願いいたします。</p> <!-- Highlight applied -->
                         </div>
                     </div>
                 </div>
