--- a/reservation_complete.html
+++ b/reservation_complete.html
@@ -50,7 +50,7 @@
         </div>
         <div class="mt-6 border-t pt-6">
             <p class="text-sm text-gray-700 leading-relaxed">
-                <strong class="font-bold text-red-600">予約は完了していません。</strong>LINEでやり取り後に正式に決定となります。お手数をおかけしますが、LINEで友だちの追加後にメッセージをお願い致します。
+                <strong class="font-bold text-red-600">予約リクエストを送信しました。</strong>LINEでやり取り後に正式に決定となります。お手数をおかけしますが、LINEで友だちの追加後にメッセージをお願い致します。
             </p>
         </div>
         <div class="mt-6 flex justify-end">
