--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
                                  <div class="text-sm text-gray-600 leading-relaxed space-y-4">
                                      <div id="concept-intro">
-                                        <p>はじめまして！<br>パーソナルボディーメイカーの<span clss="font-bold">ぬいぬいです</span>！</p>
+                                        <p>はじめまして！<br>パーソナルボディーメイカーの<span class="font-bold">ぬいぬいです</span>！</p>
                                         <p>スポーツや運動が好きかと言われたら、実は普通です。運動して疲れる事が好きじゃない引きこもりのオタクなので、どちらかというと気持ちは運動が向いてないタイプです。なるべく頑張る時間を少なくして、楽しむ時間を増やしたいなと、如何に運動効果を上げるために何をしたらいいのかを常に考えています。</p>
                                      </div>
                                     <div id="concept-more" class="collapsible-content space-y-4">
@@ -529,7 +529,7 @@
                         <div class="border rounded-2xl p-6 shadow-md fade-in bg-white">
                             <h4 class="text-lg font-bold text-center text-[#6B9BD1] mb-4">🌿 バランスアップ90</h4>
                             <div class="space-y-3 text-sm">
-                                <p><span class="font-bold">内容：</span> コンディショニング＋トレーニング（90分）<br><span class="ml-4">＋【加圧：腕＋脚】</span></p>
+                                <p><span class="font-bold">内容：</span> コンディショニング＋トレーニング<br><span class="ml-4">＋【加圧：腕＋脚】</span></p>
                                 <p><span class="font-bold">特徴：</span> 姿勢・可動域・筋力を総合的に整える定番プラン。骨格から整え、見た目と機能の両方を高めます。</p>
                                 <p><span class="font-bold">おすすめ：</span> 姿勢改善・疲れにくい身体づくり・ボディライン調整・筋肉がつきにくいと思う人に</p>
                             </div>
