--- a/index.html
+++ b/index.html
@@ -21,16 +21,6 @@
         .font-montserrat {
             font-family: 'Montserrat', sans-serif;
         }
-        /* Zen Maru Gothic を見出しに適用する設定 */
-        h1, h2, h3, h4, h5, h6, .section-title {
-            font-family: 'Zen Maru Gothic', sans-serif !important;
-        }
-        /* h1, h3, h4タグに直接Zen Maru Gothicが適用されるように調整 */
-        .fade-in > div > h3, .fade-in > div > h4, .text-center.md\:text-left.fade-in > h1 {
-            font-family: 'Zen Maru Gothic', sans-serif !important;
-        }
-
-
         .fade-in {
             opacity: 0;
             transform: translateY(30px) scale(0.97);
@@ -157,7 +147,7 @@
     <!-- Header -->
     <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 header-transparent">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#home" class="font-montserrat text-xl font-bold" style="color: #6B9BD1;">- Neuro x Utility x Integration -</a>
+            <a href="#home" class="font-montserrat text-xl font-bold" style="color: #6B9BD1;">NUI Personal Training<a>
             <!-- Desktop Nav -->
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#reasons" class="text-gray-600 hover:text-[#6B9BD1] font-medium nav-link">コンセプト</a>
@@ -207,7 +197,8 @@
                             一生ものの<span class="text-highlight">「健康的な美しさ」</span>を<br>手に入れる。<br>
                             人生ずっと楽しめる身体に。
                         </h1>
-                        <p class="font-bold mb-4 text-gray-700" style="font-size: 1.4rem;">NUI Personal Training</p>
+                        <p class="font-bold text-gray-700" style="font-size: 1.4rem;">NUI Personal Training</p>
+                        <p class="font-bold mb-4 text-gray-700" style="font-size: 0.8rem;">— Neuro × Utility × Integration —</p>
                         <p class="mb-10" style="font-size: 0.8rem; line-height: 1.7;">
                             あなたのこの先の人生に<br>
                             笑顔を増やしていきたい、<br>
@@ -228,7 +219,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-10 fade-in">
                     <p class="text-xl md:text-2xl font-bold leading-relaxed" style="color: #34495e;">
-                        NUI — Neuro × Utility × Integration —<br>
+                        — Neuro × Utility × Integration —<br>
                         神経・実用性・統合の3つを軸に、<br>
                         身体の“使い方”を整えていく。
                     </p>
