--- a/index.html
+++ b/index.html
@@ -192,21 +192,16 @@
                     </div>
                     <!-- Text Column -->
                     <div class="text-center md:text-left fade-in" style="transition-delay: 200ms;">
+                        <p class="font-bold text-gray-700" style="font-size: 1.4rem;">NUI Personal Training</p>
+                        <p class="font-bold mb-4 text-gray-700" style="font-size: 0.8rem;">— Neuro × Utility × Integration —</p>
                         <h1 class="font-bold mb-4" style="font-size: 1.2rem; line-height: 1.7; color: #34495e;">
                             ただ痩せるだけじゃない。<br>
                             一生ものの<span class="text-highlight">「健康的な美しさ」</span>を<br>手に入れる。<br>
-                            人生ずっと楽しめる身体に。
+                            無理なく、自然と、美しく変わる自分へ。<br>
+							人生ずっと楽しめる身体に。
                         </h1>
-                        <p class="font-bold text-gray-700" style="font-size: 1.4rem;">NUI Personal Training</p>
-                        <p class="font-bold mb-4 text-gray-700" style="font-size: 0.8rem;">— Neuro × Utility × Integration —</p>
-                        <p class="mb-10" style="font-size: 0.8rem; line-height: 1.7;">
-                            あなたのこの先の人生に<br>
-                            笑顔を増やしていきたい、<br>
-                            そんな思いを軸にして動いている<br>
-                            パーソナルボディーメイカー
-                        </p>
                         <div class="flex flex-col sm:flex-row items-center justify-center md:justify-start gap-4">
-                            <a href="#contact" class="btn-mint text-white font-bold py-3 px-8 rounded-full transition-all duration-300 hover:scale-105 w-full sm:w-auto">まずは気軽に相談してみる</a>
+                            <a href="#contact" class="btn-mint text-white font-bold py-3 px-8 rounded-full transition-all duration-300 hover:scale-105 w-full sm:w-auto">今すぐ予約する</a>
                             <a href="#services" class="bg-transparent border-2 text-gray-700 font-bold py-3 px-8 rounded-full hover:bg-gray-700 hover:text-white transition-colors duration-300 w-full sm:w-auto" style="border-color: #6B9BD1; color: #6B9BD1;">サービス・料金を確認する</a>
                         </div>
                     </div>
@@ -217,11 +212,14 @@
         <!-- Reasons Section -->
         <section id="reasons" class="py-20 md:py-28 bg-gray-50">
             <div class="container mx-auto px-6">
-                <div class="text-center mb-10 fade-in">
-                    <p class="text-xl md:text-2xl font-bold leading-relaxed" style="color: #34495e;">
-                        — Neuro × Utility × Integration —<br>
-                        神経・実用性・統合の3つを軸に、<br>
-                        身体の“使い方”を整えていく。
+                <div class="mb-10 fade-in">
+                    <p class="md:text-xl font-bold leading-relaxed" style="color: #34495e;">
+                     N：Neutrality<br>
+					 身体を“ニュートラル＝本来の動き”に戻し、<br>
+					 U：Utilization<br>
+					 正しい使い方を身につけ、<br>
+					 I：Integration<br>
+					全身がつながって動ける状態へ導く。<br>
                     </p>
                 </div>
                 <div class="text-center mb-16 fade-in">
