--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                     </div>
                     <!-- Text Column -->
                     <div class="text-center md:text-left fade-in" style="transition-delay: 200ms;">
-                        <p class="font-bold text-gray-700" style="font-size: 1.4rem;">NUI Personal Training</p>
-                        <p class="font-bold mb-4 text-gray-700" style="font-size: 0.8rem;">— Neuro × Utility × Integration —</p>
-                        <h1 class="font-bold mb-4" style="font-size: 1.2rem; line-height: 1.7; color: #34495e;">
+                        <p class="font-bold text-gray-700" style="font-size: 1.6rem;">NUI Personal Training</p>
+                        <p class="font-bold mb-4 text-gray-700" style="font-size: 1rem;">— Neuro × Utility × Integration —</p>
+                        <h1 class="font-bold mb-4" style="line-height: 1.7; color: #34495e;">
                             ただ痩せるだけじゃない。<br>
                             一生ものの<span class="text-highlight">「健康的な美しさ」</span>を<br>手に入れる。<br>
                             無理なく、自然と、美しく変わる自分へ。<br>
@@ -214,11 +214,11 @@
             <div class="container mx-auto px-6">
                 <div class="mb-10 fade-in">
                     <p class="md:text-xl font-bold leading-relaxed" style="color: #34495e;">
-                     N：Neutrality<br>
+                     <span class="text-2xl">N：Neutrality</span><br>
 					 身体を“ニュートラル＝本来の動き”に戻し、<br>
-					 U：Utilization<br>
+					 <span class="text-2xl">U：Utilizatio</span>n<br>
 					 正しい使い方を身につけ、<br>
-					 I：Integration<br>
+					 <span class="text-2xl">I：Integration</span><br>
 					全身がつながって動ける状態へ導く。<br>
                     </p>
                 </div>
