--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             font-size: 1.6rem; /* 元のスタイルに合わせる */
             font-weight: 700;
             color: #34495e;
-            justify-self: end; /* ラベルを右揃え */
+            justify-self: center;
         }
         .nui-colon {
             font-size: 1.6rem;
@@ -168,7 +168,7 @@
             /* 3列を結合して行の先頭から開始 */
             grid-column: 1 / -1; 
             font-weight: 400; /* 説明文は太字ではない */
-            font-size: 1.2rem; /* 説明文のフォントサイズ (元のpタグに準拠) */
+            font-size: 1rem; /* 説明文のフォントサイズ (元のpタグに準拠) */
             line-height: 1.8;
             color: #34495e;
             padding-left: 0.1em; /* N との左端を微調整 */
@@ -232,7 +232,7 @@
                     <!-- Text Column -->
                     <div class="text-center md:text-left fade-in" style="transition-delay: 200ms;">
                         <p class="font-bold text-gray-700" style="font-size: 1.6rem;">NUI Personal Training</p>
-                        <p class="font-bold mb-4 text-gray-700" style="font-size: 1rem;">— Neuro × Utility × Integration —</p>
+                        <p class="font-bold mb-4 text-gray-700" style="font-size: 1.2rem;">— Neuro × Utility × Integration —</p>
                         <h1 class="font-bold mb-4" style="line-height: 1.7; color: #34495e;">
                             ただ痩せるだけじゃない。<br>
                             一生ものの<span class="text-highlight">「健康的な美しさ」</span>を<br>手に入れる。<br>
