--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                     </div>
                     <!-- Text Column -->
                     <div class="text-center md:text-left fade-in" style="transition-delay: 200ms;">
-                        <p class="font-bold text-gray-700" style="font-size: 1.8rem;">NUI Personal Training</p>
-                        <p class="font-bold mb-4 text-gray-700" style="font-size: 1.2rem;">— Neuro × Utility × Integration —</p>
+                        <p class="font-bold text-gray-700" style="font-size: 1.6rem;">NUI Personal Training</p>
+                        <p class="font-bold mb-4 text-gray-700" style="font-size: 1rem;">— Neutrality × Utility × Integration —</p>
                         <h1 class="font-bold mb-4" style="line-height: 1.7; color: #34495e;">
                             ただ痩せるだけじゃない。<br>
                             一生ものの<span class="text-highlight">「健康的な美しさ」</span>を<br>手に入れる。<br>
