--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                     </div>
                      <!-- Notes -->
                     <div class="text-left text-sm text-gray-500 space-y-1 fade-in max-w-3xl mx-auto">
-                         <p>※上記は90分メニューの回数券です。60分メニューの回数券についてはお問い合わせください。</p>
+                         <p>※上記は90分メニューの回数券です。</p>
                          <p>※加圧導入オプションは＋1,000円/回（希望者のみ）</p>
                          <p>※すべて出張セッション料金（交通費・レンタルジム代は別途）</p>
                          <p>※回数券の有効期限は「初回利用から1年以内」を目安にご利用ください</p>
