--- a/reservation_complete.html
+++ b/reservation_complete.html
@@ -28,6 +28,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-04BBQQHFVN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-04BBQQHFVN');
+</script>
 <body class="flex items-center justify-center min-h-screen p-6">
 
     <div class="bg-white p-8 rounded-2xl shadow-xl border max-w-2xl w-full">
