--- a/reservation_complete.html
+++ b/reservation_complete.html
@@ -29,13 +29,13 @@
     </style>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-04BBQQHFVN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-05333V71JS"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-04BBQQHFVN');
+  gtag('config', 'G-05333V71JS');
 </script>
 <body class="flex items-center justify-center min-h-screen p-6">
 
