--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
     </style>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-04BBQQHFVN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-05333V71JS"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-04BBQQHFVN');
+  gtag('config', 'G-05333V71JS');
 </script>
 <body class="antialiased text-gray-700">
 
