--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <div class="accordion-content pl-16">
                             <p class="text-gray-600 text-sm leading-relaxed mb-8">
                                 「ジムに行く時間がない」「人が多い場所は落ち着かない」「外に出るのが億劫」——そんな悩みをすべて解決。<br>
-                                NUINUIでは、トレーニング・整体・ストレッチに加え、加圧トレーニングを出張でご提供します。<br>
+                                NUIでは、トレーニング・整体・ストレッチに加え、加圧トレーニングを出張でご提供します。<br>
                                 マシンがなくても、専用ベルトを使用することで効率的に身体へアプローチが可能。<br>
                                 自宅でも、安心して本格的なトレーニングを受けられます。
                             </p>
@@ -309,7 +309,8 @@
                                  <div class="text-left">
                                     <h3 class="text-2xl font-bold text-[#6B9BD1] mb-4">加圧トレーニング</h3>
                                     <p class="text-gray-600 text-sm leading-relaxed">
-                                        加圧トレーニングは、腕や脚の付け根に専用のベルトで適切な圧をかけ、血流をコントロールしながら行う科学的根拠に基づいたトレーニング法です。脳と筋肉に「高強度の運動をしている」と錯覚させることで、軽い負荷・短時間でも高い効果を引き出すことができ、筋力アップやボディメイクはもちろん、脂肪燃焼・代謝向上・アンチエイジングなど多方面に働きかけます。<br><br>特に注目すべきは、加圧によって分泌が促される成長ホルモンです。通常のトレーニングの約200倍とも言われる分泌が期待でき、筋肉の合成や脂肪の分解、美肌や細胞の修復といった身体の再生・若返り効果にも大きく関わります。<br><br>NUINUIでは、圧力や脈の変化を「オシロスコープ」という波形モニターで常に可視化し、状態を正確に把握しながら一人ひとりに最適な圧を精密にコントロールしています。この丁寧な管理により、安全性を高めつつ最大限の効果を引き出すことが可能です。ハードな筋トレが苦手な方や初心者でも、安心して継続でき、身体が本来持つ力を最大限に引き出しながら理想の自分へと近づいていけます。
+                                        加圧トレーニングは、腕や脚の付け根に専用のベルトで適切な圧をかけ、血流をコントロールしながら行う科学的根拠に基づいたトレーニング法です。脳と筋肉に「高強度の運動をしている」と錯覚させることで、軽い負荷・短時間でも高い効果を引き出すことができ、筋力アップやボディメイクはもちろん、脂肪燃焼・代謝向上・アンチエイジングなど多方面に働きかけます。<br><br>特に注目すべきは、加圧によって分泌が促される成長ホルモンです。通常のトレーニングの約200倍とも言われる分泌が期待でき、筋肉の合成や脂肪の分解、美肌や細胞の修復といった身体の再生・若返り効果にも大きく関わります。<br><br>
+                                        NUIでは、圧力や脈の変化を「オシロスコープ」という波形モニターで常に可視化し、状態を正確に把握しながら一人ひとりに最適な圧を精密にコントロールしています。この丁寧な管理により、安全性を高めつつ最大限の効果を引き出すことが可能です。ハードな筋トレが苦手な方や初心者でも、安心して継続でき、身体が本来持つ力を最大限に引き出しながら理想の自分へと近づいていけます。
                                     </p>
                                 </div>
                                 <div class="max-h-[450px] overflow-hidden rounded-2xl shadow-xl">
@@ -325,7 +326,7 @@
                              <div class="flex-grow">
                                 <div>
                                     <h3 class="text-xl font-bold text-[#6B9BD1] mb-2">あなただけの完全オーダーメイドプログラム</h3>
-                                    <p class="text-gray-600 text-sm leading-relaxed pb-4">「頑張っているのに、思うような変化が出ない…」<br>それは、あなたの身体に合っていない方法を続けているだけかもしれません。<br>NUINUIでは、解剖学・機能生理学・神経学の観点から、<br>ひとりひとりの身体に“今”必要なアプローチを見つけていきます。</p>
+                                    <p class="text-gray-600 text-sm leading-relaxed pb-4">「頑張っているのに、思うような変化が出ない…」<br>それは、あなたの身体に合っていない方法を続けているだけかもしれません。<br>NUIでは、解剖学・機能生理学・神経学の観点から、<br>ひとりひとりの身体に“今”必要なアプローチを見つけていきます。</p>
                                 </div>
                             </div>
                             <div class="accordion-arrow text-2xl text-[#6B9BD1] transform transition-transform duration-300 ml-4 self-start pt-1">↓</div>
