--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NUI Personal Training | 出張型パーソナルトレーニング</title>
     <meta name="description" content="NUI Personal Trainingは出張型パーソナルトレーニング・整体サービスです。東京・千葉・埼玉エリア対応。加圧トレーニングやオーダーメイドプログラムで健康的な美しさをサポートします。">
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./style.css" rel="stylesheet">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
